[gd_scene load_steps=18 format=3 uid="uid://c1e4ah00w8ega"]

[ext_resource type="Script" path="res://scripts/PlayerScript.gd" id="1_plpqb"]
[ext_resource type="Script" path="res://scripts/InputManager.gd" id="4_luu8n"]
[ext_resource type="Material" uid="uid://br1dfe55k1mx4" path="res://Assets/_Assets/Materials/PlayerBody.mat.tres" id="4_wks77"]
[ext_resource type="Material" uid="uid://ciy54jf2yjldb" path="res://Assets/_Assets/Materials/Black.mat.tres" id="5_m8u8t"]
[ext_resource type="Script" path="res://scripts/Interact_Raycast.gd" id="6_0vjvn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0rhe4"]
radius = 0.301123

[sub_resource type="Animation" id="Animation_qsvbe"]
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.65, 0, 0.9967, 1, 0, 0.65, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Head")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1.549, 0, 0.5, 1, 0, 1.606, 0, 1.00654, 1, 0, 1.549, 0)
metadata/resolved_to_default_paths = {
"TBody": ["Body", "", 4],
"THead": ["Head", "", 4]
}

[sub_resource type="Animation" id="Animation_fig1l"]
length = 0.001

[sub_resource type="Animation" id="Animation_2m1de"]
length = 0.166667
loop_mode = 1
step = 0.1667
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.65, 0, 0.0997802, 1, 0, 0.887, 0, 0.1667, 1, 0, 0.65, 0)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Head")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1.549, 0, 0.0508588, 1, 0, 1.671, 0, 0.133686, 1, 0, 1.549, 0)
metadata/resolved_to_default_paths = {
"TBody": ["Body", "", 4],
"THead": ["Head", "", 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihf78"]
resource_name = "Player"
_data = {
"Idle": SubResource("Animation_qsvbe"),
"RESET": SubResource("Animation_fig1l"),
"Walk": SubResource("Animation_2m1de")
}
metadata/animation_guid_fileid_to_name = {
"1d9b9f03f848d714abb6b7ff43d4531b:7400000": "Idle",
"686436e1b17e56340a28f218c36b9d68:7400000": "Walk"
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kbmyl"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m4jt7"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x83wc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_31vti"]
switch_mode = 1
advance_mode = 2
advance_expression = "is_walking() and is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rodch"]
switch_mode = 1
advance_mode = 2
advance_expression = "not is_walking() or not is_on_floor()"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6hdxk"]
states/Idle/node = SubResource("AnimationNodeAnimation_kbmyl")
states/Idle/position = Vector2(378, 124)
states/Walk/node = SubResource("AnimationNodeAnimation_m4jt7")
states/Walk/position = Vector2(620, 144)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_x83wc"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_31vti"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_rodch")]
graph_offset = Vector2(-56, 69)

[sub_resource type="SphereMesh" id="SphereMesh_8ebow"]
resource_name = "Sphere"

[node name="Player" type="CharacterBody3D"]
editor_description = "yo mama"
script = ExtResource("1_plpqb")
gravity = 3.0

[node name="InputManager" type="Node" parent="."]
script = ExtResource("4_luu8n")

[node name="Player_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0rhe4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
root_node = NodePath(".")
libraries = {
"": SubResource("AnimationLibrary_ihf78")
}
autoplay = "Walk"

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_ihf78")
}
tree_root = SubResource("AnimationNodeStateMachine_6hdxk")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 1.55929, 0)

[node name="MeshRenderer" type="MeshInstance3D" parent="Head"]
editor_description = "[MeshRenderer 23::1c5dda3c7cd3cf742afcade5419faeab:3294758250785316822]"
mesh = SubResource("SphereMesh_8ebow")
surface_material_override/0 = ExtResource("4_wks77")
metadata/unidot_keys = {
"m_AdditionalVertexStreams": [null, 0, null, null],
"m_AutoUVMaxAngle": 89,
"m_AutoUVMaxDistance": 0.5,
"m_CastShadows": 1,
"m_CorrespondingSourceObject": [null, 0, null, null],
"m_DynamicOccludee": 1,
"m_Enabled": 1,
"m_GameObject": [null, 3294758250785316824, null, null],
"m_IgnoreNormalsForChartDetection": 0,
"m_ImportantGI": 0,
"m_LightProbeUsage": 1,
"m_LightProbeVolumeOverride": [null, 0, null, null],
"m_LightmapParameters": [null, 0, null, null],
"m_Materials": [[null, 2100000, "dba792b574c201a4eabfe983aa82805a", 2]],
"m_MinimumChartSize": 4,
"m_MotionVectors": 1,
"m_ObjectHideFlags": 0,
"m_PrefabAsset": [null, 0, null, null],
"m_PrefabInstance": [null, 0, null, null],
"m_PreserveUVs": 0,
"m_ProbeAnchor": [null, 0, null, null],
"m_RayTraceProcedural": 0,
"m_RayTracingMode": 2,
"m_ReceiveGI": 1,
"m_ReceiveShadows": 1,
"m_ReflectionProbeUsage": 1,
"m_RendererPriority": 0,
"m_RenderingLayerMask": 1,
"m_ScaleInLightmap": 1,
"m_SelectedEditorRenderState": 3,
"m_SortingLayer": 0,
"m_SortingLayerID": 0,
"m_SortingOrder": 0,
"m_StaticBatchInfo": {
"firstSubMesh": 0,
"subMeshCount": 0
},
"m_StaticBatchRoot": [null, 0, null, null],
"m_StaticShadowCaster": 0,
"m_StitchLightmapSeams": 1
}

[node name="Eye_R" type="Node3D" parent="Head"]
transform = Transform3D(0.111111, 0, 0, 0, 0.222222, 0, 0, 0, 0.111111, -0.160333, 0.152222, 0.402333)

[node name="MeshRenderer" type="MeshInstance3D" parent="Head/Eye_R"]
editor_description = "[MeshRenderer 23::1c5dda3c7cd3cf742afcade5419faeab:3294758251951329640]"
mesh = SubResource("SphereMesh_8ebow")
surface_material_override/0 = ExtResource("5_m8u8t")
metadata/unidot_keys = {
"m_AdditionalVertexStreams": [null, 0, null, null],
"m_AutoUVMaxAngle": 89,
"m_AutoUVMaxDistance": 0.5,
"m_CastShadows": 1,
"m_CorrespondingSourceObject": [null, 0, null, null],
"m_DynamicOccludee": 1,
"m_Enabled": 1,
"m_GameObject": [null, 3294758251951329642, null, null],
"m_IgnoreNormalsForChartDetection": 0,
"m_ImportantGI": 0,
"m_LightProbeUsage": 1,
"m_LightProbeVolumeOverride": [null, 0, null, null],
"m_LightmapParameters": [null, 0, null, null],
"m_Materials": [[null, 2100000, "90f0eed1477afe14b9e538e5bfa88cdc", 2]],
"m_MinimumChartSize": 4,
"m_MotionVectors": 1,
"m_ObjectHideFlags": 0,
"m_PrefabAsset": [null, 0, null, null],
"m_PrefabInstance": [null, 0, null, null],
"m_PreserveUVs": 0,
"m_ProbeAnchor": [null, 0, null, null],
"m_RayTraceProcedural": 0,
"m_RayTracingMode": 2,
"m_ReceiveGI": 1,
"m_ReceiveShadows": 1,
"m_ReflectionProbeUsage": 1,
"m_RendererPriority": 0,
"m_RenderingLayerMask": 1,
"m_ScaleInLightmap": 1,
"m_SelectedEditorRenderState": 3,
"m_SortingLayer": 0,
"m_SortingLayerID": 0,
"m_SortingOrder": 0,
"m_StaticBatchInfo": {
"firstSubMesh": 0,
"subMeshCount": 0
},
"m_StaticBatchRoot": [null, 0, null, null],
"m_StaticShadowCaster": 0,
"m_StitchLightmapSeams": 1
}

[node name="Eye_L" type="Node3D" parent="Head"]
transform = Transform3D(0.111111, 0, 0, 0, 0.222222, 0, 0, 0, 0.111111, 0.160333, 0.152222, 0.402333)

[node name="MeshRenderer" type="MeshInstance3D" parent="Head/Eye_L"]
editor_description = "[MeshRenderer 23::1c5dda3c7cd3cf742afcade5419faeab:3294758251266466152]"
mesh = SubResource("SphereMesh_8ebow")
surface_material_override/0 = ExtResource("5_m8u8t")
metadata/unidot_keys = {
"m_AdditionalVertexStreams": [null, 0, null, null],
"m_AutoUVMaxAngle": 89,
"m_AutoUVMaxDistance": 0.5,
"m_CastShadows": 1,
"m_CorrespondingSourceObject": [null, 0, null, null],
"m_DynamicOccludee": 1,
"m_Enabled": 1,
"m_GameObject": [null, 3294758251266466154, null, null],
"m_IgnoreNormalsForChartDetection": 0,
"m_ImportantGI": 0,
"m_LightProbeUsage": 1,
"m_LightProbeVolumeOverride": [null, 0, null, null],
"m_LightmapParameters": [null, 0, null, null],
"m_Materials": [[null, 2100000, "90f0eed1477afe14b9e538e5bfa88cdc", 2]],
"m_MinimumChartSize": 4,
"m_MotionVectors": 1,
"m_ObjectHideFlags": 0,
"m_PrefabAsset": [null, 0, null, null],
"m_PrefabInstance": [null, 0, null, null],
"m_PreserveUVs": 0,
"m_ProbeAnchor": [null, 0, null, null],
"m_RayTraceProcedural": 0,
"m_RayTracingMode": 2,
"m_ReceiveGI": 1,
"m_ReceiveShadows": 1,
"m_ReflectionProbeUsage": 1,
"m_RendererPriority": 0,
"m_RenderingLayerMask": 1,
"m_ScaleInLightmap": 1,
"m_SelectedEditorRenderState": 3,
"m_SortingLayer": 0,
"m_SortingLayerID": 0,
"m_SortingOrder": 0,
"m_StaticBatchInfo": {
"firstSubMesh": 0,
"subMeshCount": 0
},
"m_StaticBatchRoot": [null, 0, null, null],
"m_StaticShadowCaster": 0,
"m_StitchLightmapSeams": 1
}

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0.65, 0)

[node name="MeshRenderer" type="MeshInstance3D" parent="Body"]
editor_description = "[MeshRenderer 23::1c5dda3c7cd3cf742afcade5419faeab:3294758251441920655]"
mesh = SubResource("SphereMesh_8ebow")
surface_material_override/0 = ExtResource("4_wks77")
metadata/unidot_keys = {
"m_AdditionalVertexStreams": [null, 0, null, null],
"m_AutoUVMaxAngle": 89,
"m_AutoUVMaxDistance": 0.5,
"m_CastShadows": 1,
"m_CorrespondingSourceObject": [null, 0, null, null],
"m_DynamicOccludee": 1,
"m_Enabled": 1,
"m_GameObject": [null, 3294758251441920689, null, null],
"m_IgnoreNormalsForChartDetection": 0,
"m_ImportantGI": 0,
"m_LightProbeUsage": 1,
"m_LightProbeVolumeOverride": [null, 0, null, null],
"m_LightmapParameters": [null, 0, null, null],
"m_Materials": [[null, 2100000, "dba792b574c201a4eabfe983aa82805a", 2]],
"m_MinimumChartSize": 4,
"m_MotionVectors": 1,
"m_ObjectHideFlags": 0,
"m_PrefabAsset": [null, 0, null, null],
"m_PrefabInstance": [null, 0, null, null],
"m_PreserveUVs": 0,
"m_ProbeAnchor": [null, 0, null, null],
"m_RayTraceProcedural": 0,
"m_RayTracingMode": 2,
"m_ReceiveGI": 1,
"m_ReceiveShadows": 1,
"m_ReflectionProbeUsage": 1,
"m_RendererPriority": 0,
"m_RenderingLayerMask": 1,
"m_ScaleInLightmap": 1,
"m_SelectedEditorRenderState": 3,
"m_SortingLayer": 0,
"m_SortingLayerID": 0,
"m_SortingOrder": 0,
"m_StaticBatchInfo": {
"firstSubMesh": 0,
"subMeshCount": 0
},
"m_StaticBatchRoot": [null, 0, null, null],
"m_StaticShadowCaster": 0,
"m_StitchLightmapSeams": 1
}

[node name="Interact_Raycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
top_level = true
visible = false
target_position = Vector3(0, 0, 1)
collision_mask = 6
script = ExtResource("6_0vjvn")

[node name="Hold_Item" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.75)
